--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "otp-generator": "^4.0.1",
+    "twilio": "^5.9.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
