--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.9",
     "otp-generator": "^4.0.1",
     "razorpay": "^2.9.6",
     "twilio": "^5.9.0"
